white space:fix

--- a/styles/hero.css
+++ b/styles/hero.css
@@ -36,7 +36,7 @@
     .hero_image_mobile{
         display:block;
         margin:auto;
-        width:400px;
+        max-width:min(400px,90%);
         height:170px;
         aspect-ratio: 1.81/1;
     }
